--- a/index.html
+++ b/index.html
@@ -3,15 +3,51 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite + React + TS</title>
+  <link rel="icon" type="image/png" href="favicon.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+
+  <!-- Primary Meta Tags -->
+  <title>Saraighat Digital - Your Complete Digital Library</title>
+  <meta name="title" content="Saraighat Digital - Your Complete Digital Library">
+  <meta name="description" content="Access our extensive collection of e-books and audiobooks anytime, anywhere.">
+
+  <!-- Keywords -->
+  <meta name="keywords" content="Saraighat Digital, digital library, e-books, audiobooks, books">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://saraighatdigital.com">
+  <meta property="og:title" content="Saraighat Digital - Your Complete Digital Library">
+  <meta property="og:description"
+    content="Access our extensive collection of e-books and audiobooks anytime, anywhere.">
+  <meta property="og:image" content="https://saraighatdigital.com/logo.png">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://saraighatdigital.com">
+  <meta property="twitter:title" content="Saraighat Digital - Your Complete Digital Library">
+  <meta property="twitter:description"
+    content="Access our extensive collection of e-books and audiobooks anytime, anywhere.">
+  <meta property="twitter:image" content="https://saraighatdigital.com/logo.png">
+
+  <!-- Additional Meta Tags -->
+  <meta name="author" content="Saraighat Digital">
+  <meta name="robots" content="index, follow">
+  <meta name="language" content="English">
+  <meta name="revisit-after" content="7 days">
+  <meta name="theme-color" content="#ffffff">
+
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://saraighatdigital.com" />
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="favicon.png">
 </head>
 
 <body>
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
-<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.10.377/pdf.min.js"></script> -->
+
 
 </html>
